--- a/nam.html
+++ b/nam.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/favicon.ico">
 
-    <title>Success media : ผลงาน</title>
+    <title>Success media : นามบัตร</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
             <li class="nav-item px-5">
               <a class="nav-link" href="services.html">บริการ</a>
             </li>
-            <li class="nav-item active dropdown px-5">
+            <li class="nav-item dropdown active px-5">
                   <a class="nav-link dropdown-toggle" href="work.html" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     ผลงาน</a><span class="sr-only">(current)</span>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,10 +60,10 @@
                   </div>
             </li>
             <li class="nav-item px-5">
-              <a class="nav-link px-5" href="contact.html">เกี่ยวกับ</a>
+              <a class="nav-link px-5" href="about.html">เกี่ยวกับ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="about.html">ติดต่อ</a>
+              <a class="nav-link px-5" href="contact.html">ติดต่อ</a>
             </li>
           </ul>
         </div>
@@ -72,68 +72,74 @@
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <hr>
-                      <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
+                      <h1 class="display-2 text-center font-special-style text-success1">นามบัตร</h1>
                       <div class="row">
-                        <div class="col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full1.jpg">
-                            <img src="assets/img-work/1.jpg" class="img-fluid" alt="Image 1">
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
+                            <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full2.jpg">
-                             <img src="assets/img-work/2.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full2.jpg">
+                             <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full3.jpg">
-                            <img src="assets/img-work/3.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full3.jpg">
+                            <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
 
-                        <div class="col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full4.jpg">
-                            <img src="assets/img-work/4.jpg" class="img-fluid" alt="Image 1">
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full4.jpg">
+                            <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full5.jpg">
-                             <img src="assets/img-work/5.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full5.jpg">
+                             <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full6.jpg">
-                            <img src="assets/img-work/6.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full6.jpg">
+                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
 
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full7.jpg">
-                            <img src="assets/img-work/7.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full7.jpg">
+                            <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-6 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/full8.jpg">
-                            <img src="assets/img-work/8.jpg" class="img-fluid" alt="Image 1">
+                        <div class=" col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full8.jpg">
+                            <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
                     </div>
                   </div>
-          <!--END ITEM-->
-          <!-- FOOTER -->
-        <footer class="text-center bg-success1 py-2">
-                <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
-        </footer>
-      <!-- Bootstrap core JavaScript
-      ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="assets/js/vendor/popper.min.js"></script>
-      <script src="assets/js/bootstrap.min.js"></script>
-      <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-      <!-- BEGIN EXTEND JAVASCRIPT-->
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-      <script type="text/javascript" src="assets/js/gmaps.js"></script>
+        <!--END ITEM-->
+        <div class="bg-footer">
+          <div class="container pb-3">
+          </div>
+        </div>
+        <!-- FOOTER -->
+      <footer class="text-center bg-success1 py-2">
+              <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
+      </footer>
+    </br>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="assets/js/vendor/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <!-- BEGIN EXTEND JAVASCRIPT-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="assets/js/gmaps.js"></script>
+    <!--Map Marker-->
   </body>
 </html>
