--- a/stwork.html
+++ b/stwork.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/favicon.ico">
 
-    <title>Success media : ตู้ไฟ</title>
+    <title>Success media : สติ๊กเกอร์</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +49,7 @@
               <a class="nav-link" href="services.html">บริการ</a>
             </li>
             <li class="nav-item dropdown active px-5">
-                  <a class="nav-link dropdown-toggle" href="work.html" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     ผลงาน</a><span class="sr-only">(current)</span>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="vinin.html">ไวนิล</a>
@@ -72,7 +72,7 @@
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <hr>
-                      <h1 class="display-2 text-center font-special-style text-success1">ตู้ไฟ</h1>
+                      <h1 class="display-2 text-center font-special-style text-success1">สติ๊กเกอร์</h1>
                       <div class="row">
                         <div class="col-lg-6 mb-3">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
