--- a/services.html
+++ b/services.html
@@ -38,131 +38,149 @@
     </header>
      <!-- ====== END HEADER ====== -->
 
-      <nav class="navbar navbar-expand-md navbar-dark bg-success1">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-md-center" id="navbarCollapse">
-          <ul class="navbar-nav ">
-            <li class="nav-item px-5">
-              <a class="nav-link" href="index.html">หน้าหลัก</a>
-            </li>
-            <li class="nav-item active px-5">
-              <a class="nav-link" href="services.html">บริการ</a>
-            </li>
-            <li class="nav-item px-5">
-              <a class="nav-link" href="work.html">ผลงาน</a>
-            </li>
-            <li class="nav-item px-5">
-              <a class="nav-link px-5" href="contact.html">เกี่ยวกับ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-5" href="about.html">ติดต่อ</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-      </nav>
-
+     <nav class="navbar navbar-expand-md navbar-dark bg-success1">
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse justify-content-md-center" id="navbarCollapse">
+         <ul class="navbar-nav ">
+           <li class="nav-item px-5">
+             <a class="nav-link" href="index.html">หน้าหลัก</a>
+           </li>
+           <li class="nav-item active px-5">
+             <a class="nav-link" href="services.html">บริการ</a>
+           </li>
+           <li class="nav-item dropdown px-5">
+                 <a class="nav-link dropdown-toggle" href="work.html" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   ผลงาน</a><span class="sr-only">(current)</span>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                   <a class="dropdown-item" href="vinin.html">ไวนิล</a>
+                   <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
+                   <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
+                   <a class="dropdown-item" href="nam.html">นามบัตร</a>
+                   <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                 </div>
+           </li>
+           <li class="nav-item px-5">
+             <a class="nav-link px-5" href="about.html">เกี่ยวกับ</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link px-5" href="contact.html">ติดต่อ</a>
+           </li>
+         </ul>
+       </div>
+     </nav>
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <hr>
                       <h1 class="display-2 text-center font-special-style text-success1">บริการ</h1>
                       <div class="row">
-                        <div class="col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full1.jpg" class="image-link" >
                             <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
-                            </a>
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full2.jpg">
-                             <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                            <a href="assets/img-service/full2.jpg" class="image-link" >
+                            <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full3.jpg">
+                            <a href="assets/img-service/full3.jpg" class="image-link" >
                             <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
-
-                        <div class="col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full4.jpg">
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full4.jpg" class="image-link" >
                             <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full5.jpg" class="image-link" >
+                            <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full6.jpg" class="image-link" >
+                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full7.jpg" class="image-link" >
+                            <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full8.jpg" class="image-link" >
+                            <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full9.jpg" class="image-link" >
+                            <img src="assets/img-service/9.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full10.jpg" class="image-link" >
+                            <img src="assets/img-service/10.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full11.jpg" class="image-link" >
+                            <img src="assets/img-service/11.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full12.jpg" class="image-link" >
+                            <img src="assets/img-service/12.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full13.jpg" class="image-link" >
+                            <img src="assets/img-service/13.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full14.jpg" class="image-link" >
+                            <img src="assets/img-service/14.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full15.jpg" class="image-link" >
+                            <img src="assets/img-service/15.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full16.jpg" class="image-link" >
+                            <img src="assets/img-service/16.jpg" class="img-fluid" alt="Image 1">
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                             </a>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full5.jpg">
-                             <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full6.jpg">
-                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full7.jpg">
-                            <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full8.jpg">
-                            <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full9.jpg">
-                            <img src="assets/img-service/9.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full10.jpg">
-                            <img src="assets/img-service/10.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full11.jpg">
-                            <img src="assets/img-service/11.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full12.jpg">
-                            <img src="assets/img-service/12.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full13.jpg">
-                            <img src="assets/img-service/13.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full14.jpg">
-                            <img src="assets/img-service/14.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full15.jpg">
-                            <img src="assets/img-service/15.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full16.jpg">
-                            <img src="assets/img-service/16.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full17.jpg">
+                            <a href="assets/img-service/full17.jpg" class="image-link" >
                             <img src="assets/img-service/17.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full18.jpg" class="image-link" >
                             <img src="assets/img-service/18.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
                     </div>
                   </div>
@@ -187,7 +205,7 @@
           <script type="text/javascript">
             $(document).ready(function() {
                     $('.image-link').magnificPopup({type:'image'});
-                    
+
                   });
           </script>
 
