--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/carousel.css" rel="stylesheet">
      <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" href="assets/css/magnific-popup.css">
   </head>
   <body>
 
@@ -138,11 +139,11 @@
                       <hr>
                       <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
                       <div class="row">
-                          <div class="col-lg-4 mb-3">
-                              <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                              <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
-                              </a>
-                        </div>
+                        <div class=" col-lg-4 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                             <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                             </a>
+                      </div>
 
                         <div class=" col-lg-4 mb-3">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
@@ -200,6 +201,13 @@
     <script type="text/javascript" src="assets/js/gmaps.js"></script>
     <!--Map Marker-->
     <script type="text/javascript">
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+         <script type="text/javascript">
+           $(document).ready(function() {
+                   $('.image-link').magnificPopup({type:'image'});
+
+                 });
+         </script>
       var map;
           $(document).ready(function(){
           map = new GMaps({
