--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
                       <hr>
                       <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
                       <div class="row">
-                        <div class=" col-lg-4 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                             <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                      </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full1.jpg" class="image-link" >
+                            <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
 
                         <div class=" col-lg-4 mb-3">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
