--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
                  </div>
            </li>
            <li class="nav-item px-5">
-             <a class="nav-link px-5" href="contact.html">เกี่ยวกับ</a>
+             <a class="nav-link px-5" href="about.html">เกี่ยวกับ</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link active px-5" href="about.html">ติดต่อ</a>
+             <a class="nav-link active px-5" href="content.html">ติดต่อ</a>
            </li>
          </ul>
        </div>
