--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/carousel.css" rel="stylesheet">
      <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" href="assets/css/magnific-popup.css">
   </head>
   <body>
 
@@ -35,7 +36,7 @@
         </div>
     </header>
      <!-- ====== END HEADER ====== -->
-     <!-- START THE FEATURETTES -->
+
      <nav class="navbar navbar-expand-md navbar-dark bg-success1">
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -68,48 +69,153 @@
          </ul>
        </div>
      </nav>
-          <!--END ITEM-->
-          <div class="bg-footer">
-            <div class="container pb-3">
-              <hr>
-              <h1 class="display-2 text-center font-special-style text-success1">แผนที่</h1>
-              <div id="map"></div>
+
+      <!--  ======= BEGIN VIDEOS  ========= -->
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="" src="assets/img/Success1.jpg" alt="Responsive image">
+            <div class="container">
+              <div class="carousel-caption text-left">
+              </div>
             </div>
           </div>
-          <!-- FOOTER -->
-        <footer class="text-center bg-success1 py-2">
-                <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
-        </footer>
-      <!-- Bootstrap core JavaScript
-      ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="assets/js/vendor/popper.min.js"></script>
-      <script src="assets/js/bootstrap.min.js"></script>
-      <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-      <!-- BEGIN EXTEND JAVASCRIPT-->
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-      <script type="text/javascript" src="assets/js/gmaps.js"></script>
-      <!--Map Marker-->
-      <script type="text/javascript">
-        var map;
-            $(document).ready(function(){
-            map = new GMaps({
-              el: '#map',
-            lat:  18.7912182,
-            lng: 98.9839447,
-             zoom:17
-            });
+        </div>
+      <!--  ======= END VIDEOS  ========= -->
 
-            map.addMarker({
-            lat:   18.7912182,
-            lng: 98.9839447,
-              title: 'Lima'
+          <div class="carousel-item">
+            <img class="second-slide" src="assets/img/Success1.jpg" alt="Responsive image">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Another example headline.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="third-slide" src="assets/img/Success1.jpg" alt="Responsive image">
+            <div class="container">
+              <div class="carousel-caption text-right">
+                <h1>One more for good measure.</h1>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              </div>
+            </div>
+          </div>
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+  </div>
 
-            });
-            });
-      </script>
+
+    <!--  ======= BEGIN HISTORY SUCESS ========= -->
+
+      <div class="history-zone bg-white">
+        <hr>
+          <div class="container py-5">
+            <h1 class="display-2 text-center font-special-style text-success1 my-3">ประวัติร้าน</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+      </div>
+
+    <!--  ======= END HISTORY SUCESS ========= -->
+
+        <!-- START THE FEATURETTES -->
+                    <div class="container">
+                      <hr>
+                      <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
+                      <div class="row">
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full1.jpg" class="image-link" >
+                            <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+
+                        <div class=" col-lg-4 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
+                             <img src="assets/img/2.jpg" class="img-fluid" alt="Image 1">
+                             </a>
+                      </div>
+
+                      <div class=" col-lg-4 mb-3">
+                          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full3.jpg">
+                          <img src="assets/img/3.jpg" class="img-fluid" alt="Image 1">
+                           </a>
+                    </div>
+                    <div class="col-lg-4 mb-3">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full4.jpg">
+                        <img src="assets/img/4.jpg" class="img-fluid" alt="Image 1">
+                        </a>
+                  </div>
+
+                  <div class=" col-lg-4 mb-3">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full5.jpg">
+                       <img src="assets/img/5.jpg" class="img-fluid" alt="Image 1">
+                       </a>
+                  </div>
+
+                  <div class=" col-lg-4 mb-3">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full6.jpg">
+                      <img src="assets/img/6.jpg" class="img-fluid" alt="Image 1">
+                       </a>
+                </div>
+              </div>
+            </div>
+        <!--END ITEM-->
+        <div class="bg-footer">
+          <div class="container pb-3">
+            <hr>
+            <h1 class="display-2 text-center font-special-style text-success1">แผนที่</h1>
+            <div id="map"></div>
+          </div>
+        </div>
+        <!-- FOOTER -->
+      <footer class="text-center bg-success1 py-2">
+              <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
+      </footer>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="assets/js/vendor/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <!-- BEGIN EXTEND JAVASCRIPT-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="assets/js/gmaps.js"></script>
+    <!--Map Marker-->
+    <script type="text/javascript">
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+         <script type="text/javascript">
+           $(document).ready(function() {
+                   $('.image-link').magnificPopup({type:'image'});
+
+                 });
+         </script>
+      var map;
+          $(document).ready(function(){
+          map = new GMaps({
+            el: '#map',
+          lat:  18.7912182,
+          lng: 98.9839447,
+           zoom:17
+          });
+
+          map.addMarker({
+          lat:   18.7912182,
+          lng: 98.9839447,
+            title: 'Lima'
+
+          });
+          });
+    </script>
   </body>
 </html>
