--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,18 @@
          </ul>
        </div>
      </nav>
+          <!--ITEM ZONE-->
+          <div class="container">
+            <hr>
+            <div class="container">
+              <div class=" col-lg-4 container mb-12">
+                  <a href="assets/img-contact/boss.jpg" class="image-link" >
+                  <img src="assets/img-contact/boss.jpg" class="img-fluid" alt="Image 1">
+                </a>
+                <div class="text-center font-special-style display-4 text-success1"><p>เจ้าของกิจการ</p></div>
+              </div>
+            </div>
+          </div>
           <!--END ITEM-->
           <div class="bg-footer">
             <div class="container pb-3">
