--- a/services.html
+++ b/services.html
@@ -12,9 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-     <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
-
-       <!-- Magnific Popup core CSS file -->
+    <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
   </head>
   <body>
@@ -109,6 +107,7 @@
                             <a href="assets/img-service/full6.jpg" class="image-link" >
                             <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
                           </a>
+                          <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full7.jpg" class="image-link" >
@@ -167,8 +166,8 @@
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full16.jpg" class="image-link" >
                             <img src="assets/img-service/16.jpg" class="img-fluid" alt="Image 1">
+                          </a>
                             <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
-                            </a>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full17.jpg" class="image-link" >
