--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="assets/css/carousel.css" rel="stylesheet">
-     <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
-     <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
+
+       <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
   </head>
   <body>
 
@@ -69,70 +70,36 @@
          </ul>
        </div>
      </nav>
+     <!--  ======= BEGIN VIDEOS  ========= -->
+     <div class="bg-success">
+      <div class="videos-zone">
+           <div class="homepage-hero-module">
+          <div class="video-container">
+              <div class="filter"></div>
+              <video id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
+                <source src="assets/videos/discussing_features.mp4" type="video/mp4" />
+                <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
+                  <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                </p>
+              </video>
+              <div class="poster hidden">
+                  <img src="" alt="">
+              </div>
+                 </div>
+            </div>
+      </div>
+     </div>
+     <!--  ======= END VIDEOS  ========= -->
 
-      <!--  ======= BEGIN VIDEOS  ========= -->
-      <div class="bg-success">
-       <div class="videos-zone">
-            <div class="homepage-hero-module">
-           <div class="video-container">
-               <div class="filter"></div>
-               <video id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
-                 <source src="assets/videos/discussing_features.mp4" type="video/mp4" />
-                 <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
-                   <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-                 </p>
-               </video>
-               <div class="poster hidden">
-                   <img src="" alt="">
-               </div>
-                  </div>
-             </div>
+     <!--  ======= BEGIN HISTORY SUCESS ========= -->
+       <div class="history-zone bg-white">
+         <hr>
+           <div class="container py-5">
+             <h1 class="display-2 text-center font-special-style text-success1 my-3">ประวัติร้าน</h1>
+             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+           </div>
        </div>
-      </div>
-      <!--  ======= END VIDEOS  ========= -->
-
-          <div class="carousel-item">
-            <img class="second-slide" src="assets/img/Success1.jpg" alt="Responsive image">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="assets/img/Success1.jpg" alt="Responsive image">
-            <div class="container">
-              <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-  </div>
-
-
-    <!--  ======= BEGIN HISTORY SUCESS ========= -->
-
-      <div class="history-zone bg-white">
-        <hr>
-          <div class="container py-5">
-            <h1 class="display-2 text-center font-special-style text-success1 my-3">ประวัติร้าน</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-          </div>
-      </div>
-
-    <!--  ======= END HISTORY SUCESS ========= -->
+     <!--  ======= END HISTORY SUCESS ========= -->
 
         <!-- START THE FEATURETTES -->
                     <div class="container">
@@ -145,38 +112,40 @@
                           </a>
                             <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
                         </div>
-
-                        <div class=" col-lg-4 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
-                             <img src="assets/img/2.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                      </div>
-
-                      <div class=" col-lg-4 mb-3">
-                          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full3.jpg">
-                          <img src="assets/img/3.jpg" class="img-fluid" alt="Image 1">
-                           </a>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full2.jpg" class="image-link" >
+                            <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full3.jpg" class="image-link" >
+                            <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full4.jpg" class="image-link" >
+                            <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full5.jpg" class="image-link" >
+                            <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
+                        <div class=" col-lg-4 mb-4">
+                            <a href="assets/img-service/full6.jpg" class="image-link" >
+                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
+                          </a>
+                          <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                        </div>
                     </div>
-                    <div class="col-lg-4 mb-3">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full4.jpg">
-                        <img src="assets/img/4.jpg" class="img-fluid" alt="Image 1">
-                        </a>
                   </div>
-
-                  <div class=" col-lg-4 mb-3">
-                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full5.jpg">
-                       <img src="assets/img/5.jpg" class="img-fluid" alt="Image 1">
-                       </a>
-                  </div>
-
-                  <div class=" col-lg-4 mb-3">
-                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full6.jpg">
-                      <img src="assets/img/6.jpg" class="img-fluid" alt="Image 1">
-                       </a>
-                </div>
-              </div>
-            </div>
         <!--END ITEM-->
+        <!-- FOOTER -->
         <div class="bg-footer">
           <div class="container pb-3">
             <hr>
@@ -202,13 +171,6 @@
     <script type="text/javascript" src="assets/js/gmaps.js"></script>
     <!--Map Marker-->
     <script type="text/javascript">
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-         <script type="text/javascript">
-           $(document).ready(function() {
-                   $('.image-link').magnificPopup({type:'image'});
-
-                 });
-         </script>
       var map;
           $(document).ready(function(){
           map = new GMaps({
@@ -226,5 +188,5 @@
           });
           });
     </script>
-  </body>
+</body>
 </html>
