--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
 			    </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-			            <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">facebook-icon</li></a>
-			            <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">line-icon</li></a>
-			            <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">phone-icon</li></a>
+			            <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
+			            <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+			            <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
@@ -80,18 +80,18 @@
                   <h1>เจ้าของกิจการ</h1></div>
                   <div class="text-center font-special-style text-success1">
                   <h1>คุณยอดชัย ผดุงศฺลป์</h1></div>
+                </div>
+              </div>
+            </div>
                   <br>
-                    <div class="col-lg-12">
-                    <div class="text-left font-special-style text-success1">
+                    <div class="col-md-12">
+                    <div class="text-center font-special-style text-success1">
                     <h1>ที่อยู่ : 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่</h1>
                     <h1>Tel : 053-327044</h1>
                     <h1>Line : vhan5581</h1>
                     <h1>Facebook : www.facebook.com/sc.media.cm</h1>
                     </div>
                    </div>
-                  </div>
-                </div>
-              </div>
           <!--END ITEM-->
           <div class="bg-footer">
             <div class="container pb-3">
