--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			    </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-			            <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">facebook-icon</li></a>
-			            <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">line-icon</li></a>
-			            <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">phone-icon</li></a>
+                <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
+                <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+                <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
